tests/algorithms/x/C/sorts/bitonic_sort.c
// Generated by Mochi 0.10.32 on 2025-08-23 21:18 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t set_at_int_len;
size_t comp_and_swap_len;
size_t bitonic_merge_len;
size_t bitonic_sort_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_int(const long long *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[32];
        snprintf(tmp, sizeof(tmp), "%lld", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

long long * set_at_int(long long * xs, size_t xs_len, long long idx, long long value);
long long * comp_and_swap(long long * arr, size_t arr_len, long long i, long long j, long long dir);
long long * bitonic_merge(long long * arr, size_t arr_len, long long low, long long length, long long dir);
long long * bitonic_sort(long long * arr, size_t arr_len, long long low, long long length, long long dir);
void user_main();
int main(void);

long long * set_at_int(long long * xs, size_t xs_len, long long idx, long long value) {
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < xs_len) {
        if (i == idx) {
            res = list_append_int_new(res, res_len, value);
            res_len++;
        } else {
            res = list_append_long_long(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        }
        i = i + 1LL;
    }
    return set_at_int_len = res_len, res;
}

long long * comp_and_swap(long long * arr, size_t arr_len, long long i, long long j, long long dir) {
    long long *res = arr;
    size_t res_len = arr_len;
    long long xi = arr[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    long long xj = arr[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? arr_len + _mochi_idx : _mochi_idx;})];
    if (((dir == 1LL) && (xi > xj)) || ((dir == 0LL) && (xi < xj))) {
        res = set_at_int(res, res_len, i, xj);
        res_len = set_at_int_len;
        res = set_at_int(res, res_len, j, xi);
        res_len = set_at_int_len;
    }
    return comp_and_swap_len = res_len, res;
}

long long * bitonic_merge(long long * arr, size_t arr_len, long long low, long long length, long long dir) {
    long long *res = arr;
    size_t res_len = arr_len;
    if (length > 1LL) {
        long long mid = length / 2LL;
        long long k = low;
        while (k < (low + mid)) {
            res = comp_and_swap(res, res_len, k, k + mid, dir);
            res_len = comp_and_swap_len;
            k = k + 1LL;
        }
        res = bitonic_merge(res, res_len, low, mid, dir);
        res_len = bitonic_merge_len;
        res = bitonic_merge(res, res_len, low + mid, mid, dir);
        res_len = bitonic_merge_len;
    }
    return bitonic_merge_len = res_len, res;
}

long long * bitonic_sort(long long * arr, size_t arr_len, long long low, long long length, long long dir) {
    long long *res = arr;
    size_t res_len = arr_len;
    if (length > 1LL) {
        long long mid = length / 2LL;
        res = bitonic_sort(res, res_len, low, mid, 1LL);
        res_len = bitonic_sort_len;
        res = bitonic_sort(res, res_len, low + mid, mid, 0LL);
        res_len = bitonic_sort_len;
        res = bitonic_merge(res, res_len, low, length, dir);
        res_len = bitonic_merge_len;
    }
    return bitonic_sort_len = res_len, res;
}

void user_main() {
    long long *data = NULL;
    size_t data_len = 0;
    data = list_append_long_long(data, &data_len, 12LL);
    data = list_append_long_long(data, &data_len, 34LL);
    data = list_append_long_long(data, &data_len, 92LL);
    data = list_append_long_long(data, &data_len, -23.0);
    data = list_append_long_long(data, &data_len, 0LL);
    data = list_append_long_long(data, &data_len, -121.0);
    data = list_append_long_long(data, &data_len, -167.0);
    data = list_append_long_long(data, &data_len, 145LL);
    long long *asc = bitonic_sort(data, data_len, 0LL, 8LL, 1LL);
    size_t asc_len = bitonic_sort_len;
    puts(str_list_int(asc, asc_len));
    long long *desc = bitonic_merge(asc, asc_len, 0LL, asc_len, 0LL);
    size_t desc_len = bitonic_merge_len;
    puts(str_list_int(desc, desc_len));
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
